added citations for modelling

--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -1862,6 +1862,23 @@
   file = {C\:\\Users\\Me\\Zotero\\storage\\DLSD56RP\\Davi et al. - 2008 - Modelling leaf mass per area in forest canopy as a.pdf}
 }
 
+@article{davisLiDARderivedTopographyForest2019,
+  title = {{{LiDAR}}-Derived Topography and Forest Structure Predict Fine-Scale Variation in Daily Surface Temperatures in Oak Savanna and Conifer Forest Landscapes},
+  author = {Davis, Frank W. and Synes, Nicholas W. and Fricker, Geoffrey A. and McCullough, Ian M. and Serra-Diaz, Josep M. and Franklin, Janet and Flint, Alan L.},
+  date = {2019-05-15},
+  journaltitle = {Agricultural and Forest Meteorology},
+  volume = {269-270},
+  pages = {192--202},
+  issn = {0168-1923},
+  doi = {10.1016/j.agrformet.2019.02.015},
+  url = {https://www.sciencedirect.com/science/article/pii/S0168192319300668},
+  urldate = {2021-08-08},
+  abstract = {In mountain landscapes, surface temperatures vary over short distances due to interacting influences of topography and overstory vegetation on local energy and water balances. At two study landscapes in the Sierra Nevada of California, characterized by foothill oak savanna at 276–481\,m elevation and montane conifer forest at 1977–2135\,m, we deployed 288 near-surface (5\,cm above the surface) temperature sensors to sample site-scale (30\,m) temperature variation related to hillslope orientation and vegetation structure and microsite-scale (2–10\,m) variation related to microtopography and tree overstory. Daily near-surface maximum and minimum temperatures for the 2013 calendar year were related to topographic factors and vegetation overstory characterized using small footprint LiDAR imagery acquired by the National Ecological Observatory Network (NEON) Airborne Observation Platform (AOP). At both landscapes we recorded large site and microsite spatial variation in daily maximum temperatures, and less absolute variation in daily minimum temperatures. Generalized boosted regression trees were estimated to measure the influence of tree canopy density, understory solar radiation, cold-air drainage and pooling, ground cover and microtopography on daily maximum and minimum temperatures at site and microsite scales. Site-scale models based on indices of understory solar radiation and landscape position explained an average of 61–65\% of daily variation in maximum temperature; site-scale models based on tree canopy density and landscape position explained 65–83\% of variation in minimum temperatures. Models explained {$<$}15\% of variation in microsite-scale maximum temperatures but within-site heterogeneity was significantly correlated with within-site heterogeneity in modeled understory radiation at both landscapes. Tree canopy density and slope explained 33\% of microsite-scale variation in minimum temperatures at savanna sites. Our results demonstrate that it is feasible to model site-scale variation in daily surface temperature extremes and within-site heterogeneity in surface temperatures using LiDAR-derived variables, supporting efforts to understand cross-scale relationships between surface microclimates and regional climate change. Improved understanding of topographic and vegetative buffering of thermal microclimates across mountain landscapes is key to projecting microclimate heterogeneity and potential species’ range dynamics under future climate change.},
+  langid = {english},
+  keywords = {Cold-air drainage,Insolation,Microclimate,NEON},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\ZTPMVL47\\Davis et al. - 2019 - LiDAR-derived topography and forest structure pred.pdf;C\:\\Users\\Me\\Zotero\\storage\\MLWQV92A\\S0168192319300668.html}
+}
+
 @article{davisMicroclimaticBufferingForests2019,
   title = {Microclimatic Buffering in Forests of the Future: The Role of Local Water Balance},
   shorttitle = {Microclimatic Buffering in Forests of the Future},
@@ -1959,6 +1976,23 @@
   file = {C\:\\Users\\Me\\Zotero\\storage\\59F89VNI\\Demmig-Adams - 1998 - Survey of Thermal Energy Dissipation and Pigment C.pdf;C\:\\Users\\Me\\Zotero\\storage\\G33I4WLW\\1850683.html}
 }
 
+@article{depurySimpleScalingPhotosynthesis1997,
+  title = {Simple Scaling of Photosynthesis from Leaves to Canopies without the Errors of Big-Leaf Models},
+  author = {De Pury, D. G. G. and Farquhar, G. D.},
+  date = {1997-05},
+  journaltitle = {Plant Cell Environ},
+  volume = {20},
+  number = {5},
+  pages = {537--557},
+  issn = {0140-7791, 1365-3040},
+  doi = {10.1111/j.1365-3040.1997.00094.x},
+  url = {https://onlinelibrary.wiley.com/doi/10.1111/j.1365-3040.1997.00094.x},
+  urldate = {2021-08-09},
+  abstract = {In big-leaf models of canopy photosynthesis, the Rubisco activity per unit ground area is taken as the sum of activities per unit leaf area within the canopy, and electron transport capacity is similarly summed. Such models overestimate rates of photosynthesis and require empirical curvature factors in the response to irradiance. We show that, with any distribution of leaf nitrogen within the canopy (including optimal), the required curvature factors are not constant but vary with canopy leaf area index and leaf nitrogen content. We further show that the underlying reason is the difference between the time-averaged and instantaneous distributions of absorbed irradiance, caused by penetration of sunflecks and the range of leaf angles in canopies.},
+  langid = {english},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\9337DLSP\\De Pury and Farquhar - 1997 - Simple scaling of photosynthesis from leaves to ca.pdf}
+}
+
 @article{derroireContrastingPatternsLeaf2018,
   title = {Contrasting Patterns of Leaf Trait Variation among and within Species during Tropical Dry Forest Succession in {{Costa Rica}}},
   author = {Derroire, Géraldine and Powers, Jennifer S. and Hulshof, Catherine M. and Cárdenas Varela, Luis E. and Healey, John R.},
@@ -1991,7 +2025,8 @@
   abstract = {Leaf area index and leaf area density profiles are key variables for upscaling from leaves to ecosystems yet are difficult to measure well in dense and tall forest canopies. We present a new model to estimate leaf area density profiles from discrete multireturn data derived by airborne waveform light detection and ranging (lidar), a model based on stochastic radiative transfer theory. We tested the method on simulated ray tracing data for highly clumped forest canopies, both vertically homogenous and vertically inhomogeneous. Our method was able to reproduce simulated vertical foliage profiles with small errors and predictable biases in dense canopies (leaf area index = 6) including layers below densely foliated upper canopies. As a case study, we then applied the method to real multireturn airborne lidar data for a 50 ha plot of moist tropical forest on Barro Colorado Island, Panama. The method is suitable for estimating foliage profiles in a complex tropical forest, which opens new avenues for analyses of spatial and temporal variations in foliage distributions.},
   langid = {english},
   keywords = {complex forest,leaf area density,leaf area index,multireturn lidar,tropical forest,waveform lidar},
-  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1002/2014JG002774}
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1002/2014JG002774},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\H6UNSEW3\\Detto et al. - 2015 - Spatial variability in tropical forest leaf area d.pdf;C\:\\Users\\Me\\Zotero\\storage\\HQZ5JN33\\2014JG002774.html}
 }
 
 @article{dewarWhyDoesLeaf2012,
@@ -6149,6 +6184,23 @@
   abstract = {{$<$}p{$>$}Drier climates predicted for many regions can result in reduced evaporative cooling leading to overheating of leaves and enhanced mortality. To what extent non-evaporative cooling can contribute to plant resilience to the increasingly stressful conditions is poorly known at present. Using a novel, high accuracy infrared system for continuous measurements of leaf temperature in mature trees under field conditions, we assessed leaf-to-air temperature differences ΔT\textsubscript{leaf-air} of pine needles during drought. ΔT\textsubscript{leaf-air} was weakly related to variations in the radiation load and wind speed, but highly dependent on canopy structure and within-canopy turbulence that enhance the sensible heat flux H. On mid-summer days, ΔT\textsubscript{leaf-air} remained around 2°C, both in trees exposed to summer drought, and in those provided with a supplement irrigation having a 10x higher transpiration rate. The non-evaporative cooling in the drought-exposed trees must be facilitated by low resistance to heat transfer generating large H. Non-evaporative cooling is demonstrated as an effective cooling mechanism in needle-leaf trees, which can be a critical factor in forest resistance to drying climates. The generation of large H at the leaf scale provides a basis for the development of the previously identified canopy-scale heat dissipation through the `convector effect9.{$<$}/p{$>$}},
   langid = {english},
   file = {C\:\\Users\\Me\\Zotero\\storage\\B3H6D3AB\\Muller et al. - 2021 - Evidence for efficient non-evaporative leaf-to-air.pdf;C\:\\Users\\Me\\Zotero\\storage\\3YHAW7LI\\2021.02.01.429145v2.full.html;C\:\\Users\\Me\\Zotero\\storage\\Y9A9XRZJ\\2021.02.01.429145v2.full.html}
+}
+
+@article{musselmanEstimationSolarDirect2013,
+  title = {Estimation of Solar Direct Beam Transmittance of Conifer Canopies from Airborne {{LiDAR}}},
+  author = {Musselman, Keith N. and Margulis, Steven A. and Molotch, Noah P.},
+  date = {2013-09-01},
+  journaltitle = {Remote Sensing of Environment},
+  volume = {136},
+  pages = {402--415},
+  issn = {0034-4257},
+  doi = {10.1016/j.rse.2013.05.021},
+  url = {https://www.sciencedirect.com/science/article/pii/S0034425713001752},
+  urldate = {2021-08-08},
+  abstract = {The utility of airborne scanning LiDAR data to estimate solar direct beam canopy transmittance in complex, forested terrain was evaluated. Twenty-four hemispherical photos were used to produce ground-based estimates of solar direct beam canopy transmittance. The photo estimates were used to develop and evaluate two spatially distributed canopy transmittance models: 1) a Beer's Law-type transmittance model based on LiDAR-derived canopy metrics, and 2) a solar raytrace model applied to a three-dimensional canopy model. The models were used to estimate solar direct beam canopy transmittance at five-minute resolution for all days between the winter and summer solstices over an 800m by 700m domain at 1m horizontal grid spacing. When compared to estimates from hemispherical photos, the raytrace model resolved the complex seasonal and diurnal variability of solar direct beam canopy transmittance resulting from individual trees and localized canopy structure. The Beer's-type model was unable to resolve these detailed factors. The two models exhibited similar and relatively low normalized daily mean error values from December to early March. Later in the season (01 March–21 June), the model differences were pronounced; the daily mean and standard deviation of the error values for the Beer's-type and raytrace models were 13\%±10\% and 8\%±6\%, respectively. The results confirm previously known limitations of Beer's Law when used to estimate sub-canopy solar beam irradiance under heterogeneous canopy conditions. Averaged over the spatial domain, the Beer's-type model estimated 21\% and 48\% lower canopy transmittance than the raytrace model on 01 March and 03 May, respectively. The Beer's-type model was unable to represent the seasonal increase in areal average canopy transmission contributed from small canopy gaps. Finally, both distributed models were used to simulate the cumulative solar beam irradiance during the 2010 snowmelt season. The raytrace model was shown to capture a high level of variability necessary to simulate explicit stand-scale solar irradiance that strongly influences spatiotemporal patterns of snowmelt, soil water availability, and the partition and exchange of energy within heterogeneous forest ecosystems.},
+  langid = {english},
+  keywords = {Forest canopy,LiDAR,Ray-tracing,Solar direct beam radiation,Voxel model},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\Q83HFMWH\\Musselman et al. - 2013 - Estimation of solar direct beam transmittance of c.pdf;C\:\\Users\\Me\\Zotero\\storage\\8PT5AZSR\\S0034425713001752.html}
 }
 
 @article{naiduPhysiologicalMorphologicalAcclimation1998,
